added the table successfully

--- a/opera.html
+++ b/opera.html
@@ -68,5 +68,42 @@
 
                 <p class="direction">(Fairies threaten Peers with their wands.)</p>
     </pre>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Character</th>
+                <th>Singer</th>
+                <th>Offer</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Celia</td>
+                <td>Dua lipa</td>
+                <td>5 million Dollers</td>
+            </tr>
+            <tr>
+                <td>Leila</td>
+                <td>Geetha</td>
+                <td>5 million Dollers</td>
+            </tr>
+            <tr>
+                <td>Queen</td>
+                <td>Chitra</td>
+                <td>10 million Dollers</td>
+            </tr>
+            <tr>
+                <td>Fleta</td>
+                <td>Sunny</td>
+                <td>5 million Dollers</td>
+            </tr>
+            <tr>
+                <td>Streph</td>
+                <td>Balu</td>
+                <td>5 million Dollers</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
