added the opera2 file successfully

--- a/opera2.html
+++ b/opera2.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is the Web Assignment 4</title>
+    <title>And the show goes on.....</title>
     <link rel="stylesheet" href="gs.css">
+
 </head>
 <body>
     <h1>RajasekharaReddy Madire Productions LTD</h1>
@@ -106,6 +107,6 @@
         </tbody>
     </table>
 
-    <a href="opera2.html">Visit to the second page</a>
+    <a href="opera.html">Visit to the first opera page</a>
 </body>
 </html>
